--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <h2 class="section_title">Про нас</h2>
                 <p>
                     Неймовірно, але в найбільш переповненій частині Європи , 4 км від європейського кордону, село Росохи
-                    - ізольоване, відірване від економічного, політичного життя.
+                    - ізольоване, відірване від економічного, політичного життя - “село без сільради”.
+
                 </p>
                 <br>
                 <p>
