--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no ">
     <meta name="google-site-verification" content="4QH7rvdurnwOh5HJgDoPu3WSzUhMAm8HPq746kSD6FA" />
-    <title>Document</title>
+    <title>Росохи SAS NEST</title>
 </head>
 
 <body>
