add scroll bar services

--- a/#source/header.html
+++ b/#source/header.html
@@ -9,8 +9,7 @@
 
             <nav class="nav">
                 <a class="nav__link" href="#" data-scroll="#about">Про нас</a>
-                <a class="nav__link" href="#" data-scroll="#services">пропонуємо</a>
-
+                <a class="nav__link" href="#" data-scroll="#services">Пропонуємо</a>
                 <a class="nav__link" href="#" data-scroll="#rooms">Проживання</a>
                 <a class="nav__link" href="#" data-scroll="#reviews">Відгуки</a>
                 <a class="nav__link" href="#" data-scroll="#contacts">Контакти</a>
