--- a/service_church.html
+++ b/service_church.html
@@ -72,38 +72,50 @@
 
 
         <div class="services__body__content">
-            <h2 class="section_title">Церква Різдва Пресвятої Богородиці (ХV-ХVІ ст.)</h2>
-            <p>
-                На околиці села на високому пагорбі під прикриттям кам'яного оборонного муру стоїть церква-фортеця
-                Різдва Пресвятої Богородиці (ХV-ХVІ ст.) і дзвіниця (XIX ст.). <br><br>Товщина церковних стін перевищує
-                1,5 метрів. На жаль, ґонтовий дах нещодавно замінили металевими листами. <br><br>Перша письмова згадка
-                датована 1212 роком. Храм Різдва Пресвятої Богородиці побудований в 1456 році - перебудований в 1896
-                році та реставрований у 1926 році, храмове свято 21 вересня. <br><br>Тип споруди: оборонна церква
-            </p>
-            <!--
-        <div class="services__details">
-            <h2 class="section_title">Додатково</h2>
-            <div class="unit">
-                <h3>Безкоштовно:</h3>
-                <div class="details__unit">Кошики для походу</div>
-            </div>
-            <div class="unit">
-                <h3>Платно:</h3>
-                <div class="details__unit">
-                    <div class="unit__title">Баня 1 година</div>
-                    <div class="unit__price">200грн</div>
-                </div>
-                <div class="details__unit">
-                    <div class="unit__title">Віник 1шт.</div>
-                    <div class="unit__price">20грн</div>
-                </div>
+            <h2 class="section_title">Туристичні маршрути</h2>
+            <div class="top__content">
+                <p>
+                    Відвідування нових місць - обов'язкова складова яскравого відпочинку, щоб і фото гарні зробити і
+                    друзям
+                    було що розказати. <br>
+                    На щастя, Старосамбірщина багата історичною спадщиною. Тут, у львівських Карпатах, чималий вибір
+                    маршрутів і Ви зможете підібрати найкращий для себе.<br>
+                    Хочете пізнати справжню культуру бойківщини? Запропонуємо автентичний маршрут.<br>
+                    Плануєте підкорити карпатську вершину? Гора Маґура-Лімнянська висотою в 1022 метри чудово підійде
+                    для
+                    цієї місії.<br>
+                    Якщо Вас цікавить історична спадщина - радимо відвідати унікальну пам'ятку XV століття - церкву
+                    Різдва
+                    Пресвятої Богородиці. Дістатись туди не складно, а враження залишаться надовго.<br>
+                    Є в нас програма і для затятих мандрівників!<br>
+                    Якщо ви любитель неординарних маршрутів, можемо запропонувати екскурсію до справжньої нафтової
+                    скважини
+                    посеред карпатського лісу. Дорога туди не така легка, але де ще можна таке побачити?<br>
+                    Разом ми підберемо ідеальний маршрут!
 
+                </p>
             </div>
-            
+            <div class="bottom__content">
+                <div class="services__details">
+                    <h2 class="section_title">Додатково</h2>
+                    <div class="unit">
+                        <h3>Безкоштовно:</h3>
+                        <div class="details__unit">Lorem.</div>
+                    </div>
+                    <div class="unit">
+                        <h3>Платно:</h3>
+                        <div class="details__unit">
+                            <div class="unit__title">Lorem.</div>
+                            <div class="unit__price">200грн</div>
+                        </div>
 
-            
-        </div>
--->
+
+                    </div>
+
+
+                </div>
+            </div>
+
 
         </div>
 
@@ -175,10 +187,9 @@
 </div>
     <!--script
 ====================================================-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.inputmask.min.js" type="text/javascript"></script>
-    <script src="js/slick.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+
     <script src="js/script.js" type="text/javascript"></script>
 
 </body>
