--- a/service_fishing.html
+++ b/service_fishing.html
@@ -60,43 +60,47 @@
 
         <div class="services__body__content">
             <h2 class="section_title">Риболовля</h2>
-            <p>
-                У ставку нашої садиби Ви зможете порибалити та випробувати свою удачу.
-                <br>
-                Вода у ставок поступає з гірського джерела.
-                <br>
-                За потреби персонал надасть вам необхідне спорядження, також можна прийти зі своїм.
-                <br><br> <b>Риба:</b> окунь, карась, карп.
-            </p>
-            <div class="services__details">
-                <h2 class="section_title">Додатково</h2>
-                <div class="unit">
-                    <h3>Безкоштовно:</h3>
-                    <div class="details__unit">Вудка</div>
-                </div>
-                <div class="unit">
-                    <h3>Платно:</h3>
-                    <div class="details__unit">
-                        <div class="unit__title">1кг риби</div>
-                        <div class="unit__price">200грн</div>
+            <div class="top__content">
+                <p>
+                    У ставку нашої садиби Ви зможете порибалити та випробувати свою удачу.
+                    <br>
+                    Вода у ставок поступає з гірського джерела.
+                    <br>
+                    За потреби персонал надасть вам необхідне спорядження, також можна прийти зі своїм.
+                    <br><br> <b>Риба:</b> окунь, карась, карп.
+                </p>
+            </div>
+            <div class="bottom__content">
+                <div class="services__details">
+                    <h2 class="section_title">Додатково</h2>
+                    <div class="unit">
+                        <h3>Безкоштовно:</h3>
+                        <div class="details__unit">Вудка</div>
                     </div>
-                    <div class="details__unit">
-                        <div class="unit__title">Наживка 100г</div>
-                        <div class="unit__price">10грн</div>
+                    <div class="unit">
+                        <h3>Платно:</h3>
+                        <div class="details__unit">
+                            <div class="unit__title">1кг риби</div>
+                            <div class="unit__price">200грн</div>
+                        </div>
+                        <div class="details__unit">
+                            <div class="unit__title">Наживка 100г</div>
+                            <div class="unit__price">10грн</div>
+                        </div>
+                        <div class="details__unit">
+                            <div class="unit__title">Корм 100г</div>
+                            <div class="unit__price">10грн</div>
+                        </div>
+                        <div class="details__unit">
+                            <div class="unit__title">Лодка</div>
+                            <div class="unit__price">100грн</div>
+                        </div>
+
                     </div>
-                    <div class="details__unit">
-                        <div class="unit__title">Корм 100г</div>
-                        <div class="unit__price">10грн</div>
-                    </div>
-                    <div class="details__unit">
-                        <div class="unit__title">Лодка</div>
-                        <div class="unit__price">100грн</div>
-                    </div>
+
+
 
                 </div>
-
-
-
             </div>
 
         </div>
@@ -169,10 +173,9 @@
 </div>
     <!--script
 ====================================================-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.inputmask.min.js" type="text/javascript"></script>
-    <script src="js/slick.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+
     <script src="js/script.js" type="text/javascript"></script>
 
 </body>
