--- a/service_sport.html
+++ b/service_sport.html
@@ -59,32 +59,39 @@
 
         <div class="services__body__content">
             <h2 class="section_title">Спортивні розваги</h2>
-            <p>На території садиби Ви зможете пограти у великий теніс, волейбол та футбол.</p>
-            <div class="services__details">
-                <h2 class="section_title">Додатково</h2>
-                <div class="unit">
-                    <h3>Безкоштовно:</h3>
-                    <div class="details__unit">
-                        Бабмінтон
-                    </div>
-                    <div class="details__unit">
-                        <div class="unit__title">Футбольний та волейбольний м'ячі</div>
-
-                    </div>
-                </div>
-                <div class="unit">
-                    <h3>Платно:</h3>
-                    <div class="details__unit">
-                        <div class="unit__title">Великий теніс 1 година</div>
-                        <div class="unit__price">200грн</div>
-                    </div>
-
-
-                </div>
-
-
+            <div class="top__content">
+                <p>На території садиби Ви зможете пограти у великий теніс, волейбол та футбол.</p>
 
             </div>
+            <div class="bottom__content">
+                <div class="services__details">
+                    <h2 class="section_title">Додатково</h2>
+                    <div class="unit">
+                        <h3>Безкоштовно:</h3>
+                        <div class="details__unit">
+                            Бабмінтон
+                        </div>
+                        <div class="details__unit">
+                            <div class="unit__title">Футбольний та волейбольний м'ячі</div>
+
+                        </div>
+                    </div>
+                    <div class="unit">
+                        <h3>Платно:</h3>
+                        <div class="details__unit">
+                            <div class="unit__title">Великий теніс 1 година</div>
+                            <div class="unit__price">200грн</div>
+                        </div>
+
+
+                    </div>
+
+
+
+                </div>
+            </div>
+
+
 
         </div>
 
@@ -158,10 +165,9 @@
 </div>
     <!--script
 ====================================================-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="js/jquery.inputmask.min.js" type="text/javascript"></script>
-    <script src="js/slick.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+
     <script src="js/script.js" type="text/javascript"></script>
 
 </body>
