--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no ">
     <meta name="google-site-verification" content="4QH7rvdurnwOh5HJgDoPu3WSzUhMAm8HPq746kSD6FA" />
+
+    <!-- fav icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favIcon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favIcon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favIcon//favicon-16x16.png">
+    <link rel="manifest" href="img/favIcon//site.webmanifest">
+    <link rel="mask-icon" href="img/favIcon//safari-pinned-tab.svg" color="#deb06f">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Росохи SAS NEST</title>
 </head>
 
