--- a/rooms.html
+++ b/rooms.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 ">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Проживання</title>
 
 
 </head>
@@ -512,8 +511,8 @@
     </div>
 </div>        <!--script
 ====================================================-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+        <script src="js/script.js" type="text/javascript"></script>
+
         <script>let tab = function () {
 
                 let tabNav = document.querySelectorAll('.tabs-nav__item'),
@@ -553,7 +552,7 @@
             } else if (tabhref == '4') {
                 document.getElementsByClassName('tabs-nav__item')[3].click();
             }</script>
-        <script src="js/script.js" type="text/javascript"></script>
+
 
 </body>
 
