--- a/service_sport.html
+++ b/service_sport.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 ">
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Спортивні розваги</title>
 
 
 </head>
@@ -165,9 +165,6 @@
 </div>
     <!--script
 ====================================================-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-
     <script src="js/script.js" type="text/javascript"></script>
 
 </body>
