pop-up mobile fixed, services and routes scroll fixed, social separately HTML

--- a/service_gazebo.html
+++ b/service_gazebo.html
@@ -97,14 +97,12 @@
 
     </div>
 
+<div class="social">
 
-    <div class="social">
-
-        <a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>
-        <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
-        <a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>
-    </div>
-
+    <!--<a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>-->
+    <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
+    <!--<a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>-->
+</div>
 <div class="popup" id="popup">
     <a href="#social" class="popup__area"></a>
     <div class="popup__body">
