--- a/service_church.html
+++ b/service_church.html
@@ -108,11 +108,7 @@
                             <div class="unit__title">Lorem.</div>
                             <div class="unit__price">200грн</div>
                         </div>
-
-
                     </div>
-
-
                 </div>-->
             </div>
 
@@ -123,14 +119,14 @@
     </div>
 
 
-    <div class="social">
 
-        <a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>
-        <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
-        <a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>
-    </div>
 
-<div class="popup" id="popup">
+<div class="social">
+
+    <!--<a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>-->
+    <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
+    <!--<a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>-->
+</div><div class="popup" id="popup">
     <a href="#social" class="popup__area"></a>
     <div class="popup__body">
         <div class="popup__content">
