--- a/service_sport.html
+++ b/service_sport.html
@@ -99,13 +99,12 @@
     </div>
 
 
-    <div class="social">
+<div class="social">
 
-        <a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>
-        <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
-        <a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>
-    </div>
-
+    <!--<a class="social__item" href="https://t.me/rosohy"><img src="img/t.png" alt=""></a>-->
+    <a class="social__item" href="viber://chat?number=+380945776444"><img src="img/v.png" alt=""></a>
+    <!--<a class="social__item" href="https://wa.me/79101510855"><img src="img/w.png" alt=""></a>-->
+</div>
 
     <!--!---------------popup----------------------------------------------------------------------------------------------->
 <div class="popup" id="popup">
