routes item's  added hover effect to button

--- a/service_routes.html
+++ b/service_routes.html
@@ -70,9 +70,7 @@
         <div class="routes__body">
             <div class="routes__items">
                 <div class="routes__item" data-aos="fade-right">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">
                             Равликова ферма
@@ -84,16 +82,17 @@
                             ducimus, ut alias exercitationem cum necessitatibus possimus temporibus corrupti quis,
                             cumque ipsa repellat nulla rerum?
                         </div>
-
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/snail/1.jpg" alt="">
+
                     </div>
+
                 </div>
+
                 <div class="routes__item block__inv " data-aos="fade-left">
-                    <a href="service_church.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">Церква Різдва Пресвятої Богородиці (ХV-ХVІ ст.)</div>
                         <div class="routes__excerpt">Церква у Росохах - кам’яна перлина поміж дерев’яних шедеврів.
@@ -101,15 +100,14 @@
                             прийоми, властиві дерев’яній архітектурі.Товщина стін церкви перевищує 1 метр, місцями
                             доходячи до 1,5 м.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/church/3.jpg" alt="">
                     </div>
                 </div>
                 <div class="routes__item  " data-aos="fade-right">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">Вежа пам'яті</div>
                         <div class="routes__excerpt"> Унікальна дерев'яна
@@ -122,15 +120,14 @@
                             зафіксували у Книзі
                             рекордів України.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/tower/1.jpg" alt="">
                     </div>
                 </div>
                 <div class="routes__item block__inv " data-aos="fade-left">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">МАґУРА-ЛІМНЯНСЬКА</div>
                         <div class="routes__excerpt">Найвища вершина Маґуро-Лімнянського хребта Верхньодністровських
@@ -138,15 +135,14 @@
                             найбільш збережені народна обрядовість, звичаї, традиції жителів Західної Бойківщини і
                             Старосамбірщини.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/magura/1.jpg" alt="">
                     </div>
                 </div>
                 <div class="routes__item " data-aos="fade-right">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">Замок Гербурта</div>
                         <div class="routes__excerpt"> Найвисокогірніший замок
@@ -158,15 +154,14 @@
                             галицькому містечку
                             Добромиль.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/castle/1.jpg" alt="">
                     </div>
                 </div>
                 <div class="routes__item  block__inv" data-aos="fade-left">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">
                             АВТЕНТИЧНА БОЙКІВЩИНА
@@ -188,6 +183,7 @@
                             Бескидів відкриваються з
                             оглядового майданчика.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
 
                     </div>
                     <div class="routes__picture">
@@ -196,9 +192,7 @@
                 </div>
 
                 <div class="routes__item " data-aos="fade-right">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">ЗАГУБЛЕНІ, АЛЕ НЕ ЗАБУТІ</div>
                         <div class="routes__excerpt">Еколого-пізнавальний маршрут
@@ -212,6 +206,7 @@
                             виселені села Смільниця,
                             Мшанецьта Смерічка.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/lost/1.jpg" alt="">
@@ -219,9 +214,7 @@
                 </div>
 
                 <div class="routes__item  block__inv" data-aos="fade-left">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">
                             Міженецький дендропарк
@@ -233,6 +226,7 @@
                             значення, який водночас
                             є пам'яткою природи.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
 
                     </div>
                     <div class="routes__picture">
@@ -241,9 +235,7 @@
                 </div>
 
                 <div class="routes__item" data-aos="fade-right">
-                    <a href="c_tract.html" class="routes__more">
-                        Детальніше →
-                    </a>
+
                     <div class="routes__caption">
                         <div class="routes__title section_title">
                             ЦІСАРСЬКИЙ ТРАКТ
@@ -254,6 +246,7 @@
                             австрійська дорога, використовувана до Першої світової війни. З Орового хребта відкриваються
                             мальовничі краєвиди на автентичні бойківські поселення.
                         </div>
+                        <a href="#" class="routes__btn btn">Детальніше</a>
 
                     </div>
                     <div class="routes__picture">
