header style, header back button, routes item adaptive

--- a/#source/header-rooms-sep.html
+++ b/#source/header-rooms-sep.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <a href="index.html#rooms"><img src="img/logo.png" class="logo__s" alt=""></a>
-                <a href="index.html#rooms"><img src="img/lodo_2.png" class="logo__fix" alt=""></a>
+                <a href="javascript:history.go(-1)"><img src="img/logo.png" class="logo__s" alt=""></a>
+                <a href="javascript:history.go(-1)"><img src="img/lodo_2.png" class="logo__fix" alt=""></a>
 
             </div>
 
