--- a/#source/header-serv-sep.html
+++ b/#source/header-serv-sep.html
@@ -1,7 +1,8 @@
 <header class="service-header">
     <div class="inner">
         <div class="back-arrow">
-            <a href="index.html#services">
+            <!--<a href="index.html#services">-->
+            <a href="javascript:history.go(-1)">
                 <img src="img/left-arrow.png" alt="">
             </a>
         </div>
