--- a/service_routes.html
+++ b/service_routes.html
@@ -20,8 +20,8 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <a href="index.html#rooms"><img src="img/logo.png" class="logo__s" alt=""></a>
-                <a href="index.html#rooms"><img src="img/lodo_2.png" class="logo__fix" alt=""></a>
+                <a href="javascript:history.go(-1)"><img src="img/logo.png" class="logo__s" alt=""></a>
+                <a href="javascript:history.go(-1)"><img src="img/lodo_2.png" class="logo__fix" alt=""></a>
 
             </div>
 
@@ -72,17 +72,22 @@
                 <div class="routes__item" data-aos="fade-right">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">
-                            Равликова ферма
+                        <div class="routes__text">
+                            <div class="routes__title section_title">
+                                Равликова ферма
+                            </div>
+                            <div class="routes__excerpt">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quas provident
+                                voluptas
+                                impedit cumque dignissimos. Qui doloribus nisi consequatur excepturi itaque vero
+                                provident
+                                magnam at distinctio placeat libero, officia quia pariatur eveniet molestias. Deserunt,
+                                iure
+                                ducimus, ut alias exercitationem cum necessitatibus possimus temporibus corrupti quis,
+                                cumque ipsa repellat nulla rerum?
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <div class="routes__excerpt">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quas provident voluptas
-                            impedit cumque dignissimos. Qui doloribus nisi consequatur excepturi itaque vero provident
-                            magnam at distinctio placeat libero, officia quia pariatur eveniet molestias. Deserunt, iure
-                            ducimus, ut alias exercitationem cum necessitatibus possimus temporibus corrupti quis,
-                            cumque ipsa repellat nulla rerum?
-                        </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/snail/1.jpg" alt="">
@@ -94,13 +99,17 @@
                 <div class="routes__item block__inv " data-aos="fade-left">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">Церква Різдва Пресвятої Богородиці (ХV-ХVІ ст.)</div>
-                        <div class="routes__excerpt">Церква у Росохах - кам’яна перлина поміж дерев’яних шедеврів.
-                            Храм тричастинний з трьома верхами. У його об’ємно-просторовій композиції були використані
-                            прийоми, властиві дерев’яній архітектурі.Товщина стін церкви перевищує 1 метр, місцями
-                            доходячи до 1,5 м.
+                        <div class="routes__text">
+                            <div class="routes__title section_title">Церква Різдва Пресвятої Богородиці (ХV-ХVІ ст.)
+                            </div>
+                            <div class="routes__excerpt">Церква у Росохах - кам’яна перлина поміж дерев’яних шедеврів.
+                                Храм тричастинний з трьома верхами. У його об’ємно-просторовій композиції були
+                                використані
+                                прийоми, властиві дерев’яній архітектурі.Товщина стін церкви перевищує 1 метр, місцями
+                                доходячи до 1,5 м.
+                            </div>
+                            <a href="service_church.html" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/church/3.jpg" alt="">
@@ -109,18 +118,20 @@
                 <div class="routes__item  " data-aos="fade-right">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">Вежа пам'яті</div>
-                        <div class="routes__excerpt"> Унікальна дерев'яна
-                            дзвіниця, яку вінчає
-                            хрест. На даний час вежа
-                            - найвищий об'єкт у
-                            Європі, адже,
-                            розташована на висоті
-                            907 м н.р.м. Цей рекорд
-                            зафіксували у Книзі
-                            рекордів України.
+                        <div class="routes__text">
+                            <div class="routes__title section_title">Вежа пам'яті</div>
+                            <div class="routes__excerpt"> Унікальна дерев'яна
+                                дзвіниця, яку вінчає
+                                хрест. На даний час вежа
+                                - найвищий об'єкт у
+                                Європі, адже,
+                                розташована на висоті
+                                907 м н.р.м. Цей рекорд
+                                зафіксували у Книзі
+                                рекордів України.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/tower/1.jpg" alt="">
@@ -129,13 +140,15 @@
                 <div class="routes__item block__inv " data-aos="fade-left">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">МАґУРА-ЛІМНЯНСЬКА</div>
-                        <div class="routes__excerpt">Найвища вершина Маґуро-Лімнянського хребта Верхньодністровських
-                            Бескидів з абсолютною висотою 1022 м. Туристичний маршрут пролягає по місцевості, де
-                            найбільш збережені народна обрядовість, звичаї, традиції жителів Західної Бойківщини і
-                            Старосамбірщини.
+                        <div class="routes__text">
+                            <div class="routes__title section_title">МАґУРА-ЛІМНЯНСЬКА</div>
+                            <div class="routes__excerpt">Найвища вершина Маґуро-Лімнянського хребта Верхньодністровських
+                                Бескидів з абсолютною висотою 1022 м. Туристичний маршрут пролягає по місцевості, де
+                                найбільш збережені народна обрядовість, звичаї, традиції жителів Західної Бойківщини і
+                                Старосамбірщини.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/magura/1.jpg" alt="">
@@ -144,17 +157,19 @@
                 <div class="routes__item " data-aos="fade-right">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">Замок Гербурта</div>
-                        <div class="routes__excerpt"> Найвисокогірніший замок
-                            Львівщини
-                            розташований на
-                            вершині крутої, покритої
-                            лісом гори Сліпа у
-                            стародавньому
-                            галицькому містечку
-                            Добромиль.
+                        <div class="routes__text">
+                            <div class="routes__title section_title">Замок Гербурта</div>
+                            <div class="routes__excerpt"> Найвисокогірніший замок
+                                Львівщини
+                                розташований на
+                                вершині крутої, покритої
+                                лісом гори Сліпа у
+                                стародавньому
+                                галицькому містечку
+                                Добромиль.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/castle/1.jpg" alt="">
@@ -163,28 +178,30 @@
                 <div class="routes__item  block__inv" data-aos="fade-left">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">
-                            АВТЕНТИЧНА БОЙКІВЩИНА
-                        </div>
-                        <div class="routes__excerpt">
-                            Пішохідний еколого-
-                            пізнавальний маршрут
-                            пролягає селом Головецько.
-                            На шляху передбачено п'ять
-                            основних зупинок, на яких
-                            фахівці РЛП
-                            «Верхньодністровські
-                            Бескиди» ознайомлять вас з
-                            історією краю, а також
-                            флорою, фауною та
-                            ландшафтним різноманіттям
-                            парку. Чудові краєвиди
-                            Верхньодністровських
-                            Бескидів відкриваються з
-                            оглядового майданчика.
-                        </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
+                        <div class="routes__text">
+                            <div class="routes__title section_title">
+                                АВТЕНТИЧНА БОЙКІВЩИНА
+                            </div>
+                            <div class="routes__excerpt">
+                                Пішохідний еколого-
+                                пізнавальний маршрут
+                                пролягає селом Головецько.
+                                На шляху передбачено п'ять
+                                основних зупинок, на яких
+                                фахівці РЛП
+                                «Верхньодністровські
+                                Бескиди» ознайомлять вас з
+                                історією краю, а також
+                                флорою, фауною та
+                                ландшафтним різноманіттям
+                                парку. Чудові краєвиди
+                                Верхньодністровських
+                                Бескидів відкриваються з
+                                оглядового майданчика.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
 
+                        </div>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/boiky/1.jpg" alt="">
@@ -194,19 +211,21 @@
                 <div class="routes__item " data-aos="fade-right">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">ЗАГУБЛЕНІ, АЛЕ НЕ ЗАБУТІ</div>
-                        <div class="routes__excerpt">Еколого-пізнавальний маршрут
-                            до виселеного села Нанове із
-                            зупинкою в рекреаційному
-                            осередку у с. Лаврів «Княжа
-                            Волиця». Історія цього краю та
-                            дивовижні пейзажі зачарують
-                            вас із першої миті. Цікавими
-                            для мандрівника стануть також
-                            виселені села Смільниця,
-                            Мшанецьта Смерічка.
+                        <div class="routes__text">
+                            <div class="routes__title section_title">ЗАГУБЛЕНІ, АЛЕ НЕ ЗАБУТІ</div>
+                            <div class="routes__excerpt">Еколого-пізнавальний маршрут
+                                до виселеного села Нанове із
+                                зупинкою в рекреаційному
+                                осередку у с. Лаврів «Княжа
+                                Волиця». Історія цього краю та
+                                дивовижні пейзажі зачарують
+                                вас із першої миті. Цікавими
+                                для мандрівника стануть також
+                                виселені села Смільниця,
+                                Мшанецьта Смерічка.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
                         </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/lost/1.jpg" alt="">
@@ -216,18 +235,20 @@
                 <div class="routes__item  block__inv" data-aos="fade-left">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">
-                            Міженецький дендропарк
-                        </div>
-                        <div class="routes__excerpt">
-                            Міженецький дендропарк - пам'ятка садово-паркового
-                            мистецтва
-                            загальнодержавного
-                            значення, який водночас
-                            є пам'яткою природи.
-                        </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
+                        <div class="routes__text">
+                            <div class="routes__title section_title">
+                                Міженецький дендропарк
+                            </div>
+                            <div class="routes__excerpt">
+                                Міженецький дендропарк - пам'ятка садово-паркового
+                                мистецтва
+                                загальнодержавного
+                                значення, який водночас
+                                є пам'яткою природи.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
 
+                        </div>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/dendrP/1.jpg" alt="">
@@ -237,17 +258,21 @@
                 <div class="routes__item" data-aos="fade-right">
 
                     <div class="routes__caption">
-                        <div class="routes__title section_title">
-                            ЦІСАРСЬКИЙ ТРАКТ
-                        </div>
-                        <div class="routes__excerpt">
-                            Туристичний маршрут із зупинкою біля Лаврівського монастиря
-                            пролягає Оровим хребтом. На найвищу вершину г.Яворниська (800,5 м) веде стара серпантинна
-                            австрійська дорога, використовувана до Першої світової війни. З Орового хребта відкриваються
-                            мальовничі краєвиди на автентичні бойківські поселення.
-                        </div>
-                        <a href="#" class="routes__btn btn">Детальніше</a>
+                        <div class="routes__text">
+                            <div class="routes__title section_title">
+                                ЦІСАРСЬКИЙ ТРАКТ
+                            </div>
+                            <div class="routes__excerpt">
+                                Туристичний маршрут із зупинкою біля Лаврівського монастиря
+                                пролягає Оровим хребтом. На найвищу вершину г.Яворниська (800,5 м) веде стара
+                                серпантинна
+                                австрійська дорога, використовувана до Першої світової війни. З Орового хребта
+                                відкриваються
+                                мальовничі краєвиди на автентичні бойківські поселення.
+                            </div>
+                            <a href="#" class="routes__btn btn">Детальніше</a>
 
+                        </div>
                     </div>
                     <div class="routes__picture">
                         <img src="img/services/routes/c_tract/1.jpg" alt="">
