--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 </head>
 
 <body>
-<header class="header" id="header">
+<div id="pagePreloader" class="preloader">
+    <div class="loader">
+        <img src="img/favIcon/android-chrome-192x192.png" alt="">
+    </div>
+</div><header class="header" id="header">
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
