--- a/service_sauna.html
+++ b/service_sauna.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-
-<header class="service-header">
+<div id="pagePreloader" class="preloader">
+    <div class="loader">
+        <img src="img/favIcon/android-chrome-192x192.png" alt="">
+    </div>
+</div><header class="service-header">
     <div class="inner">
         <div class="back-arrow">
             <!--<a href="index.html#services">-->
