--- a/thankYou.html
+++ b/thankYou.html
@@ -30,41 +30,42 @@
 
             background: url(../img/home_bg.jpg) no-repeat bottom;
             background-size: cover;
-
-            &__inner {
-                height: 100%;
-                width: 100%;
-                padding: 20px;
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                text-align: center;
-                background-color: rgba(255, 255, 255, .1);
-                backdrop-filter: blur(10px);
-            }
-
-            &__text {
-                margin-bottom: 10px;
-
-            }
-
-            &__nav {}
-
-            h1 {
-                font-size: 60px;
-                margin-bottom: 20px;
-                font-weight: 700;
-                color: #deb06f;
-            }
-
-            h2 {
-                font-size: 30px;
-
-                color: #fcfcfc;
-            }
         }
+
+        .thank__inner {
+            height: 100%;
+            width: 100%;
+            padding: 20px;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            background-color: rgba(255, 255, 255, .1);
+            backdrop-filter: blur(10px);
+        }
+
+        .thank__text {
+            margin-bottom: 10px;
+
+        }
+
+        .thank__nav {}
+
+        .thank h1 {
+            font-size: 60px;
+            margin-bottom: 20px;
+            font-weight: 700;
+            color: #deb06f;
+        }
+
+        .thank h2 {
+            font-size: 30px;
+
+            color: #fcfcfc;
+        }
+
 
         @media (max-width: 610px) {
             .intro__subtitle span {
